# VoxelRayTracer

./: CMakeLists.txt  README.md
include/: add.h  bbox.cuh  camera.cuh  mesh.h  model.h  ray.cuh  raytracer.cuh  resource_manager.h  shader.h  texture.h  vec3.cuh  world.cuh
src/: add.cu  main.cpp  main.cu  model.cpp  resource_manager.cpp  shader.cpp  texture.cpp
